5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1721_3061.log
== TEST (2019-05-02 18:19:01) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
tipo a = int(input("quntidade de baforada 150 "))
tipo b = int(input("quantdade de baforada 30 "))
tipo c = int(inpút("quantidade de baforada 40 "))
quantidade = tipo a + tipo b + tipo c
dano=
-- ERROR:
File "XXXX", line 4
    tipo a = int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:19:05) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
tipo a = int(input("quntidade de baforada 150 "))
tipo b = int(input("quantdade de baforada 30 "))
tipo c = int(inpút("quantidade de baforada 40 "))
quantidade = tipo a + tipo b + tipo c
dano=
-- ERROR:
File "XXXX", line 4
    tipo a = int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:19:33) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
tipo a = int(input("quntidade de baforada 150: "))
tipo b = int(input("quantdade de baforada 30: "))
tipo c = int(inpút("quantidade de baforada 40: "))
quantidade = tipo a + tipo b + tipo c
dano=
-- ERROR:
File "XXXX", line 4
    tipo a = int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:20:31) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
tipo a = int(input("quntidade de baforada 150: "))
tipo b = int(input("quantdade de baforada 30: "))
tipo c = int(input("quantidade de baforada 40: "))
quantidade = tipo a + tipo b + tipo c
dano= 
-- ERROR:
File "XXXX", line 4
    tipo a = int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:26:09) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
tipo a = int(input("quntidade de baforada 150: "))
tipo b = int(input("quantdade de baforada 30: "))
tipo c = int(input("quantidade de baforada 40: "))
quantidade = tipo a + tipo b + tipo c
dano= 150*tipo
drogo= drogo+dano
   if (drogon<dano  and tipo a<=)

-- ERROR:
File "XXXX", line 4
    tipo a = int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:32:33) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at=150
at=30
at=40

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    DROGON= float(input())
ValueError: could not convert string to float: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:33) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    DROGON= float(input())
ValueError: could not convert string to float: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:01) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40
unidade=unidade<0
  it ()
-- ERROR:
File "XXXX", line 8
    it ()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:21) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    DROGON= float(input())
ValueError: could not convert string to float: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:37:10) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40
unidade= DROGON*at1




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    DROGON= float(input())
ValueError: could not convert string to float: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:49:14) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40


  int()




-- EXECUTION TIME:
0.169402
-- ERROR:
  File "/home/codebench/codes/1721/3061/main.py", line 9
    int()
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:56) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    DROGON= float(input())
ValueError: could not convert string to float: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:53:57) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40



-- EXECUTION TIME:
0.180382
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1721/3061/main.py", line 1, in <module>
    DROGON= float(input())
ValueError: could not convert string to float: 'AEREO'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:58) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    DROGON= float(input())
ValueError: could not convert string to float: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:42) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40
   if (150<DROGON)



-- ERROR:
File "XXXX", line 7
    if (150<DROGON)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:44) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40
   if (150<DROGON)



-- ERROR:
File "XXXX", line 7
    if (150<DROGON)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:45) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40
   if (150<DROGON)



-- ERROR:
File "XXXX", line 7
    if (150<DROGON)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:45) 
-- CODE:
DROGON= float(input("ataque terestre"))
RHAEGAL= float(input("ataque aereo"))
VISERION= float(input("ataque maritimo"))
at1=150
at2=30
at4=40
   if (150<DROGON)



-- ERROR:
File "XXXX", line 7
    if (150<DROGON)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
